ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  namespace: skills
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: skills-user-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "3"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /api/v1/stress
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /api/v1/stress/token
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080
